# acolyte

./: .coveragerc  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  README_zh.md  REFACTOR.md  SingleLLM.md  dev-requirements.txt  mypy_all_results.txt  pyproject.toml  pytest.ini  requirements-compat.txt  requirements.txt  run_tests.sh  setup.py  设计文档.md
acolyte/: __init__.py  main.py
acolyte/api/: __init__.py  app.py  routes.py
acolyte/cli/: commands.py  history_show.py  main.py
acolyte/config/: settings.py
acolyte/core/db/: __init__.py  database.py  models.py  session.py
acolyte/core/llm/: __init__.py  base.py  client.py  config.py  constants.py  manager.py  response.py  retry.py
acolyte/core/llm/providers/: __init__.py  anthropic.py  deepseek.py  gemini.py  ollama.py  openai.py
acolyte/core/prompt/: __init__.py  manager.py
acolyte/core/services/: __init__.py  llm_service.py  prompt_service.py  task_service.py
acolyte/core/task/: __init__.py  processor.py
acolyte/core/task/processors/: __init__.py  base.py  multiple.py  review.py  single.py
acolyte/core/utils/: __init__.py  async_utils.py  http.py
acolyte/utils/: http.py  logging.py
acolyte/web/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
acolyte/web/src/: App.tsx  env.d.ts  index.css  main.tsx
acolyte/web/src/api/: config.test.ts  config.ts  index.ts  llms.test.ts  llms.ts  prompts.test.ts  prompts.ts  tasks.test.ts  tasks.ts
acolyte/web/src/components/: ThemeProvider.test.tsx  ThemeProvider.tsx
acolyte/web/src/context/: AppContext.test.tsx  AppContext.tsx  LlmContext.test.tsx  LlmContext.tsx  PromptContext.test.tsx  PromptContext.tsx  TaskContext.test.tsx  TaskContext.tsx  index.ts
acolyte/web/src/lib/: utils.test.ts  utils.ts
acolyte/web/src/pages/: AnalyzePage.tsx  HistoryPage.tsx  HomePage.tsx  LlmConfigPage.tsx  PromptConfigPage.tsx  SystemConfigPage.tsx  TaskResultPage.tsx  TestApiPage.tsx  index.ts
acolyte/web/src/test/: setup.ts  utils.test.ts
acolyte/web/src/utils/: date.test.ts  date.ts
docs/: CLAUDE.md  DESIGN.md  REFACTOR.md  SingleLLM.md  response_parser_analysis.md  单元测试覆盖率分析_2025-04-25.md  测试覆盖率分析报告.md  项目评估报告-20250428.md
prompt/: bias-detection-prompt_v3.md  bias-detection-prompt_v4.md  bias-detection-prompt_v6.md
tests/: README.md  conftest.py
tests/texts/: mysql_vs_posgresql.txt  test_1.txt  test_2.txt  test_new_software.txt  test_news_article.txt
tests/unit/: test_main.py
tests/unit/api/: conftest.py  test_app.py  test_llm_routes.py  test_prompt_routes.py  test_task_routes.py
tests/unit/cli/: test_client.py  test_commands.py  test_history_show.py  test_main.py
tests/unit/core/: __init__.py
tests/unit/core/db/: __init__.py  test_models.py  test_session.py
tests/unit/core/llm/: __init__.py  test_base.py  test_client.py  (+4 more)
tests/unit/utils/: test_http_utils.py
tools/: check_llms.py  check_prompts.py  check_task_results.py  check_version.py  convert_config.py  create_task_for_test.py  create_test_task.py  direct_task_process.py  generate_requirements.py  process_test_task.py  review_log_analyzer.py  show_result.py  sync_prompts.py  test_llm_api.py  test_multiple_llm.py  test_new_providers.py
(+25 files in other folders)
