[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acolyte"
# 注意: 此版本号应与 acolyte/__init__.py 中的 __version__ 保持一致
version = "0.1.0"
description = "内容分析评估系统"
authors = [
    {name = "Acolyte Team"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["dependencies", "optional-dependencies"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []

# 添加以下配置来排除 tools 目录
exclude = [
    "tools",
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
